Changed stream to IO stream
Changed stream to IO stream.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ add_library(${PROJECT_NAME} SHARED ${PLATFORM_CPP_FILES} ${PLATFORM_H_FILES}
         RegularLibrary.cpp
         System/Allocator.h
         System/Console.h
-        System/FileStream.h
+        System/FileIOStream.h
         Core/Expected.h
         Core/List.cpp
         Core/List.h
@@ -50,7 +50,7 @@ add_library(${PROJECT_NAME} SHARED ${PLATFORM_CPP_FILES} ${PLATFORM_H_FILES}
         Core/Pair.cpp
         Core/Pair.h
         Core/IStream.cpp
-        Core/IStream.h)
+        Core/IIOStream.h)
 
 include(GenerateExportHeader)
 generate_export_header(${PROJECT_NAME})
